Fixed the footer CSS that caused a weird overlap issue on thinner screens.

--- a/src/style.css
+++ b/src/style.css
@@ -47,8 +47,6 @@
 
 	footer {
 		font-size: 10px;
-		/* TODO fix this */
-		height: 100px;
 	}
 
 	input {
